--- a/style.css
+++ b/style.css
@@ -113,9 +113,7 @@ button:focus{
 
 .modal-container{
     background-color: rgba(0, 0, 0, 0.6);
-    /*
     display: none;
-    */
     position: fixed;
     top: 0;
     left: 0;
@@ -134,4 +132,42 @@ button:focus{
     transform: translate(-50%, -50%);
     max-width: 100%;
     width: 400px;
+}
+
+.modal-header{
+    background: var(--primary-color);
+    color: #fff;
+    padding: 15px;
+}
+
+.modal-header h3{
+    margin: 0;
+    border-bottom: 1px solid #333;
+}
+
+.modal-content{
+    padding: 20px;
+}
+
+.modal-form div{
+    margin: 15px 0;
+}
+
+.modal-form label{
+    display: block;
+    margin-bottom: 5px;
+}
+
+.modal-form .form-input{
+    padding: 8px;
+    width: 100%;
+}
+
+.close-btn{
+    background: transparent;
+    font-size: 25px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
 }
