--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap'); 
 
 :root{
-    --modal-duration: 1s;
+    --modal-duration: 1500mss;
     --primary-color: #30336b;
     --secondary-color: #be2edd;
 }
@@ -14,6 +14,12 @@ body{
     font-family: 'Lato', 'sans-serif';
     margin: 0;
 }
+
+body.show-nav{
+    transform: translate(200px);
+    transition: transform, 0.3s ease;
+}
+
 
 nav{
     background-color: var(--primary-color);
@@ -121,6 +127,10 @@ button:focus{
     bottom: 0;
 }
 
+.modal-container .show-modal{
+    display: block;
+}
+
 .modal{
     background-color: #fff;
     border-radius: 5px;
@@ -132,6 +142,8 @@ button:focus{
     transform: translate(-50%, -50%);
     max-width: 100%;
     width: 400px;
+    animation-name: modalopen;
+    animation-duration: var(--modal-duration);
 }
 
 .modal-header{
@@ -170,4 +182,14 @@ button:focus{
     top: 0;
     right: 0;
     cursor: pointer;
+}
+
+@keyframes modalopen{
+    from{
+        opacity: 0;
+    }
+
+    to{
+        opacity: 1;
+    }
 }
